<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group>
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/home_item" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_gallery"
            android:title="@string/gallery_item" />
    </group>
    <group android:id="@+id/settingaciones">
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings"
            android:title="@string/settings_item" />
    </group>
    <group android:id="@+id/application">
        <item
            android:id="@+id/nav_logoff"
            android:icon="@drawable/ic_logoff"
            android:title="@string/logoff_item" />
    </group>


</menu>