<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="200dp"
    android:layout_height="wrap_content"
    android:gravity="center">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/add_work"
        android:textStyle="bold"
        android:textAlignment="center"
        android:background="@color/teal_200"/>

    <EditText
        android:id="@+id/toadd_title_art"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/title"
        android:layout_margin="4dp"
        android:textSize="15sp"
        android:autofillHints="name" />

    <EditText
        android:id="@+id/toadd_author_art"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/author"
        android:layout_margin="4dp"
        android:textSize="15sp" />

    <Button
        android:id="@+id/add_art_btn"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_margin="4dp"
        android:padding="0dp"
        android:text="@string/select_image"
        android:layout_gravity="start"
        android:textSize="15sp"/>


</LinearLayout>