<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="33dp"
    android:background="@drawable/wallpaper_app"
    tools:context=".fragments.auth.LoginFragment">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:cardCornerRadius="40dp"
        app:contentPadding="25dp"
        app:cardBackgroundColor="?attr/color">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginStart="82dp"
                android:layout_marginTop="75dp"
                android:layout_marginEnd="83dp"
                android:layout_marginBottom="53dp"
                android:src="@mipmap/ic_launcher_round"
                app:layout_constraintBottom_toTopOf="@+id/register_username_edit_text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/register_username_edit_text"
                android:layout_width="215dp"
                android:layout_height="44dp"
                android:layout_marginStart="38dp"
                android:layout_marginEnd="42dp"
                android:layout_marginBottom="47dp"
                android:ems="10"
                android:hint="@string/username"
                android:inputType="textPersonName"
                app:layout_constraintBottom_toTopOf="@+id/register_password_edit_text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <EditText
                android:id="@+id/register_password_edit_text"
                android:layout_width="215dp"
                android:layout_height="44dp"
                android:layout_marginStart="40dp"
                android:layout_marginEnd="40dp"
                android:layout_marginBottom="21dp"
                android:ems="10"
                android:hint="@string/password"
                android:inputType="textPassword"
                app:layout_constraintBottom_toTopOf="@+id/register_password_re_edit_text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <EditText
                android:id="@+id/register_password_re_edit_text"
                android:layout_width="215dp"
                android:layout_height="44dp"
                android:layout_marginStart="40dp"
                android:layout_marginEnd="40dp"
                android:layout_marginBottom="48dp"
                android:ems="10"
                android:hint="@string/repeat_password"
                android:inputType="textPassword"
                app:layout_constraintBottom_toTopOf="@+id/register_button"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <Button
                android:id="@+id/register_button"
                android:layout_width="219dp"
                android:layout_height="54dp"
                android:layout_marginStart="38dp"
                android:layout_marginEnd="38dp"
                android:layout_marginBottom="55dp"
                android:text="@string/register"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>




</FrameLayout>