<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="33dp"
    android:background="@drawable/wallpaper_app"
    tools:context=".fragments.auth.LoginFragment">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:cardCornerRadius="40dp"
        app:contentPadding="25dp"
        app:cardBackgroundColor="?attr/color">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginStart="82dp"
                android:layout_marginTop="75dp"
                android:layout_marginEnd="83dp"
                android:layout_marginBottom="53dp"
                android:src="@mipmap/ic_launcher_round"
                app:layout_constraintBottom_toTopOf="@+id/register_username_edit_text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/username_edit_layout"
                android:layout_width="215dp"
                android:layout_height="55dp"
                android:layout_marginStart="63dp"
                android:layout_marginEnd="63dp"
                android:layout_marginBottom="30dp"
                app:layout_constraintBottom_toTopOf="@+id/password_edit_layout"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent">

                <EditText
                    android:id="@+id/username_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@android:color/transparent"
                    android:hint="@string/username"
                    android:inputType="textPersonName" />

            </com.google.android.material.textfield.TextInputLayout>



            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/password_edit_layout"
                android:layout_width="215dp"
                android:layout_height="55dp"
                android:layout_marginStart="63dp"
                android:layout_marginEnd="63dp"
                android:layout_marginBottom="51dp"
                app:endIconMode="password_toggle"
                app:layout_constraintBottom_toTopOf="@+id/login_button"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent">

                <EditText
                    android:id="@+id/password_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    />

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/login_button"
                android:layout_width="219dp"
                android:layout_height="54dp"
                android:layout_marginStart="96dp"
                android:layout_marginEnd="96dp"
                android:layout_marginBottom="10dp"
                android:text="@string/login"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/textView"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="141dp"
                android:layout_marginEnd="11dp"
                android:layout_marginBottom="92dp"
                android:text="@string/new_here"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/singup_textview"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/singup_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="11dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="147dp"
                android:text="@string/sign_up"
                android:textColor="#FF5722"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/textView"
                app:layout_constraintTop_toBottomOf="@+id/login_button" />

            <TextView
                android:id="@+id/remember_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="108dp"
                android:layout_marginTop="11dp"
                android:layout_marginEnd="109dp"
                android:layout_marginBottom="35dp"
                android:text="CLICK HERE"
                android:textColor="#FF5722"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView2" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="44dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="44dp"
                android:layout_marginBottom="11dp"
                android:text="Do you not remember password?"
                app:layout_constraintBottom_toTopOf="@+id/remember_button"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>




</FrameLayout>